<resources>
    <string name="app_name">Android Bakery</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="empty_view_title_text">You dont have any recipes to show &#8230;</string>
    <string name="empty_view_image">Empty View Image</string>

    <string name="empty_recipe_widget">No Recipes</string>
    <string name="empty_ingredient_widget">No Recipes</string>
    <string name="widget_back_to_recipes">&lt; Back to Recipes</string>
    <string name="no_video_found">No video found for this step</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="list_of_ingredients">List of Ingredients</string>
    <string name="recipe_3_step_2_instructions_for_testiing">1. Preheat the oven to 350\u00b0F. Butter the bottoms and sides of two 9\" round pans with 2\"-high sides. Cover the bottoms of the pans with rounds of parchment paper, and butter the paper as well."</string>
    <string name="step_descriptions_for_testing">Recipe Introduction</string>
    <string name="next_step_for_testing">Starting prep</string>
</resources>
