...
        android:id="@+id/exo_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_no_video_found" />

    <TextView
        android:id="@+id/tv_recipe_step_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exo_video"
        android:padding="@dimen/instruction_text_padding"
        android:textAppearance="?android:textAppearanceMedium" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous_step" />

        <Button
            android:id="@+id/bt_next_step"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_step" />
    </LinearLayout>
...
