<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaka.androidbakery.ui.StepFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>
